--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>SUKHMANPREET SINGH</title>
 </head>
 <body>
-    
+    <header>
+       <strong>SUKHMANPREET SINGH</strong> 
+    </header>
+    <main>
+        <h1>DESCRIPTION</h1>
+        <p>STUDENT NUMBER: 041068155</p>
+        <p>PROGRAM NAME:Interactive Media design</p>
+        <p>COURSE CODE:MTM6201</p>
+        <p></p>
+    </main>
 </body>
 </html>
