--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUKHMANPREET SINGH</title>
 </head>
+
 <body>
+   <img alt="my image" src="IMG-3535.jpg" width="200">
     <header>
-       <strong>SUKHMANPREET SINGH</strong> 
+        <strong>SUKHMANPREET SINGH</strong>
     </header>
     <main>
-        <h1>DESCRIPTION</h1>
+        <h1>DESCRIPTION LIST:</h1>
         <p>STUDENT NUMBER: 041068155</p>
-        <p>PROGRAM NAME:Interactive Media design</p>
-        <p>COURSE CODE:MTM6201</p>
-        <p></p>
+        <p>PROGRAM NAME: Interactive Media design</p>
+        <p>COURSE CODE: MTM6201 WEB DEVLOPMENT 2</p>
+        <p>INTRESTING FACT: One intesting fact about me is i love playing video games and watch movies </p>
     </main>
+    <footer>
+        <p>&copy; SUKHMANPREET SINGH </p>
+    </footer>
 </body>
+
 </html>
